Added/modified some files related to the client and server sides:
Modified the .env file for the client and server.
Modified the logo and yariga.svg files in the client's assets folder.
Modified the TotalRevenue.tsx and chart.config.ts files in the client's charts folder.
Modified the Form.tsx and Profile.tsx files in the client's common folder.
Modified the agent.tsx, all-properties.tsx, home.tsx, and property-details.tsx files in the client's pages folder.
Modified the .env file for the server.

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGODB_URL = mongodb+srv://javascriptmastery:123123123a@cluster0.vbagszt.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://jaspermasibagementiza:eFU9sybgplUjCofz@cluster0.dwooalf.mongodb.net/?retryWrites=true&w=majority
 
-CLOUDINARY_CLOUD_NAME = du3dbypbw
-CLOUDINARY_API_KEY = 188486526936346
-CLOUDINARY_API_SECRET = _35go9plvJc2MxOnhvH_9b9eFao
+CLOUDINARY_CLOUD_NAME = dglbogir1
+CLOUDINARY_API_KEY = 874589219998299
+CLOUDINARY_API_SECRET = QWx4ELGIXnwH45GisGozahqUSiE
